# transformer-analyzing

./: .gitignore  Makefile  README.md  TRAINING.md  diplom_experiment.md  generate_data.py  original_experiments.md  pyproject.toml  requirements.txt
Internalize_CoT_Step_by_Step/data/4_by_4_mult/: test_bigbench.txt  valid.txt
Internalize_CoT_Step_by_Step/src/: configuration_model.py  data.py  generate.py  model.py  train.py  utils.py
graph_connectivity/scripts/: generate_data.py
graph_connectivity/src/: data.py  dsu.py  evaluate.py  model.py  tokenizer.py  train.py
icot/: README
icot/data/: processed_valid.txt  processed_valid_large.txt
icot/experiments/: fourier_figure.py  fourier_r2_fits.py  fractals_and_minkowski.py  grad_norms_and_losses.py  long_range_logit_attrib.py  probe_c_hat.py
icot/src/: ActivationCache.py  HookedModel.py  ImplicitModel.py  Intervention.py  data_utils.py  model_utils.py  probes.py  transformer.py
notebooks/: graph_train.ipynb  train-new.ipynb  train.ipynb
